--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
-version = '1.0'
+version = '1.14-1.0-Build:' + System.getenv("BUILD_NUMBER")
 group = 'com.projectreddog.tsrts' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'tsrts'
 
