--- a/TestServerConfigChanges/tsrts-common.toml
+++ b/TestServerConfigChanges/tsrts-common.toml
@@ -11,8 +11,12 @@
 	crossbowResearchCosts = "250,1000,0,250,100,100,0"
 	#Defines the cost For the archer
 	archerResearchCosts = "350,650,0,200,50,100,0"
+	#Defines the cost For the blacksmithing
+	blacksmithingResearchCosts = "350,300,100,300,100,100,0"
 	#Defines the cost For the townhall
 	townhallResearchCosts = "0,0,0,0,0,0,0"
+	#Defines the cost For the armor
+	armorResearchCosts = "450,550,200,600,100,100,0"
 	#Defines the cost For the watchtower
 	watchtowerResearchCosts = "300,500,800,100,100,250,0"
 	#Defines the cost For the siegeworkshop
@@ -21,8 +25,6 @@
 	batteringramsResearchCosts = "250,500,100,50,50,50,0"
 	#Defines the cost For the trebuchet
 	trebuchetResearchCosts = "250,1000,200,100,100,100,0"
-	#Defines the cost For the armory
-	armoryResearchCosts = "250,100,0,500,50,50,0"
 	#Defines the cost For the advcedarmor
 	advcedarmorResearchCosts = "250,0,0,200,50,250,0"
 	#Defines the cost For the pikeman
@@ -73,9 +75,13 @@
 [options]
 	#Sets if players can attack buildings or not directly. if FALSE they must use troops to attack buildings
 	canPlayersAttackBulidings = false
+	#Enforce sphere of influence =True means players cannot put down buildings out of range of other buildings on their team. set to false to disable
+	enforceSphereOfInfluence = true
 	#Sets total population cap for the server. Will be divided by the total number of teams in the game to set a team population limit/cap. This is intended to help with lag by putting a maximum upper bound on the number fo troops in the world
 	#Range: 0 ~ 10000
 	serverMaxTroop = 1200
+	#Usefull to rest the world if your server is set with an auto restart script
+	stopServerAfterGame = true
 
 #Unit Costs
 [unit_cost]
@@ -129,6 +135,8 @@
 	farmBulidingCosts = "0,15,5,0,0,0,0"
 	#Defines the cost For the Wall
 	wallBulidingCosts = "40,60,120,12,12,0,0"
+	#Defines the cost For the Marketplace
+	maketplaceBulidingCosts = "100,250,50,50,100,10,0"
 	#Defines the cost For the Siege Workshop
 	siegeWorkshopBulidingCosts = "100,250,100,25,25,50,0"
 	#Defines the cost For the Research Center
@@ -173,6 +181,9 @@
 	buildingHealthWall = 400
 	#Defines a comma separted list of values for each attribute modifier in order for the LANCE
 	#Range: 0 ~ 1024
+	buildingHealthMarketplace = 40
+	#Defines a comma separted list of values for each attribute modifier in order for the LANCE
+	#Range: 0 ~ 1024
 	buildingHealthMinesiteIron = 40
 	#Defines a comma separted list of values for each attribute modifier in order for the LANCE
 	#Range: 0 ~ 1024
@@ -203,6 +214,8 @@
 	unit_advanced_knight_attributes = "15.0,0.0,0.35,2.0,0.0,0.0,3.0,24.0"
 	#Defines a comma separted list of values for each attribute in order for the KNIGHT. Atttributes are 
 	unit_knight_attributes = "15.0,0.0,0.35,2.0,0.0,0.0,3.0,24.0"
+	#Defines a comma separted list of values for each attribute in order for the SAPPER. Atttributes are 
+	unit_sapper_attributes = "5.0,0.0,0.37,0,0.0,0.0,0.0,24.0"
 	#Defines a comma separted list of values for each attribute in order for the ARCHER. Atttributes are 
 	unit_archer_attributes = "10.0,0.0,0.30,2.0,0.0,0.0,3.0,24.0"
 	#Defines a comma separted list of values for each attribute in order for the MOUNTED. Atttributes are 
